# JobSpy

./: README.md  pyproject.toml  scrape.py
src/cli/: scrape.py  utils.py
