[project]
name = "scraper"
version = "0.1.0"
description = "CLI Job scraper for LinkedIn, Indeed, Glassdoor, ZipRecruiter & Bayt"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.2,<5",
    "pandas>=2.1.0,<3",
    "NUMPY==1.26.3",
    "pydantic>=2.3.0,<3",
    "tls-client>=1.0.1,<2",
    "markdownify>=1.1.0,<2",
    "regex>=2024.4.28,<2025",
    "typer>=0.21.1",
]
keywords = [
    "jobs-scraper",
    "linkedin",
    "indeed",
    "glassdoor",
    "ziprecruiter",
    "bayt",
    "naukri",
    "cli"
]

[project.urls]
Homepage = "https://github.com/WaveTheory1/JobSpy"

[project.scripts]
scraper = "cli.scrape:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobspy", "src/cli"]


[dependency-groups]
dev = [
    "black",
    "pre-commit",
]

[tool.black]
line-length = 88
